# Project-SDLE-ShoppingList

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
data/: changes.json  listServer_3.json  ports.json
public/: data_0.json  data_1.json  data_2.json  data_3.json  data_4.json  data_5.json  list.json
src/: App.css  App.tsx  crdt.rs  main.rs
