[package]
name = "slde"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.133"
zmq = "0.10.0"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "v7",                # If you want to use UUIDs as database keys or need to sort them then consider version 7 (v7) UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
